# seqslam

./: .clang-format  .clang-tidy  CMakeLists.txt  clconfig.json  conanfile.py  config.json
benchmark/: CMakeLists.txt  benchmark-diffmx.cpp  benchmark-eigen.cpp  benchmark-enhance.cpp  benchmark-sad.cpp  benchmark-search.cpp  benchmark-seqslam.cpp  diffmx-benchmark.cpp  search-benchmark.cpp
cmake/: Findbenchmark.cmake  Findfmt.cmake  warnings.cmake
datasets/nordland_trimmed_resized/: sample_ground_truth.csv
include/: clutils.h  measure.h  seqslam-detail.h  seqslam.h  utils.h
scripts/: benchmarks-diffmx.json  benchmarks-enhance.json  benchmarks-search.json  benchmarks.json  pr-ntraj-15.json  pr-ntraj-20.json  pr-ntraj-25.json  pr-ntraj-30.json  pr-ntraj-5.json  pr-seqlength-15.json  pr-seqlength-20.json  pr-seqlength-25.json  pr-seqlength-30.json  pr-seqlength-5.json  pr-window-10.json  pr-window-15.json  pr-window-20.json  pr-window-25.json  pr-window-30.json  pr-window-5.json  process-benchmarks.py  process-diffmx-benchmarks.py  process-enhance-benchmarks.py  process-pr.py  process-search-benchmarks.py  process-sweep.py  process-sweep2.py  runbench.sh  sweep.json
src/: benchmark.cpp  clutils.cpp  clutils.h  demo.cpp  measure.cpp  sad-benchmark.cpp  search-benchmark.cpp  seqslam.cpp  seqslam.h  test.cpp  utils.cpp
src/kernels/: .clang-format  diff-mx.cl  enhancement.cl  search.cl
test/: CMakeLists.txt  diffmx-validation-test.cpp  test-trajectory.cpp  test-validate-diffmx.cpp  test-validate-enhance.cpp  test-validate-search.cpp
